JVM类加载与一些使用技巧